set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_BUILD_TYPE Debug)

################################################################################
add_executable(accumulate accumulate.cpp)
#add_executable(reduce reduce.cpp)
add_executable(set set.cpp)
add_executable(vector vector.cpp)
add_executable(string string.cpp)
add_executable(multimap multimap.cpp)
add_executable(map map.cpp)
add_executable(iterator iterator.cpp)
add_executable(fill_n fill_n.cpp)
add_executable(set_union set_union.cpp)
add_executable(copy_if copy_if.cpp)
add_executable(allocator allocator.cpp)
add_executable(remove_serial remove_serial.cpp)
add_executable(bind bind.cpp)
add_executable(mem_fn mem_fn.cpp)
add_executable(list list.cpp)
add_executable(equal_range equal_range.cpp)
add_executable(for_each for_each.cpp)
add_executable(push_back_emplace_insert push_back_emplace_insert.cpp)
