cmake_minimum_required(VERSION 3.0)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_RQUIRED ON)

set(CMAKE_BUILD_TYPE Debug)

add_executable(binary_search_tree     binary_search_tree.cpp)
add_executable(vertical_sum           vertical_sum.cpp)
add_executable(maximum_width          maximum_width.cpp)
add_executable(maximum_depth          maximum_depth.cpp)
add_executable(invert_binary_tree     invert_binary_tree.cpp)
add_executable(level_order            level_order.cpp)
add_executable(lowest_common_ancestor lowest_common_ancestor.cpp)
