cmake_minimum_required(VERSION 3.0)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_RQUIRED ON)

set(CMAKE_BUILD_TYPE Debug)

add_executable(count_1_in_binary             count_1_in_binary.cpp)
add_executable(find_the_element_appears_once find_the_element_appears_once.cpp)
add_executable(adjacent_1 adjacent_1.cpp)
add_executable(is_power_of_two is_power_of_two.cpp)
