cmake_minimum_required(VERSION 3.5)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_RQUIRED ON)

set(CMAKE_BUILD_TYPE Debug)

add_executable(merge_two_sorted_lists                merge_two_sorted_lists.cpp)
add_executable(merge_k_sorted_lists                  merge_k_sorted_lists.cpp)
add_executable(reverse_nodes_in_k_group              reverse_nodes_in_k_group.cpp)
add_executable(remove_duplicates_from_sorted_list    remove_duplicates_from_sorted_list.cpp)
add_executable(remove_duplicates_from_sorted_list_ii remove_duplicates_from_sorted_list_II.cpp)
add_executable(remove_duplicates_from_unsorted_list  remove_duplicates_from_unsorted_list.cpp)
add_executable(partition_list                        partition_list.cpp)
add_executable(add_two_numbers                       add_two_numbers.cpp)
add_executable(reverse_linked_list                   reverse_linked_list.cpp)
add_executable(two_lists_sum_advanced                two_lists_sum_advanced.cpp)
add_executable(remove_nth_node_from_end              remove_nth_node_from_end.cpp)
add_executable(linked_list_cycle                     linked_list_cycle.cpp)
add_executable(linked_list_cycle_ii                  linked_list_cycle_ii.cpp)
add_executable(reorder_list                          reorder_list.cpp)
add_executable(copy_list_with_random_pointer         copy_list_with_random_pointer.cpp)
add_executable(merge_sort                            merge_sort.cpp)
