cmake_minimum_required(VERSION 3.0)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_RQUIRED ON)

set(CMAKE_BUILD_TYPE Debug)

add_executable(beautiful_std_alg beautiful_std_alg.cpp)
add_executable(reverse_integer   reverse_integer.cpp)
add_executable(three_sum         3sum.cpp)
add_executable(playcards         playcards.cpp)
